--- a/app/assets/stylesheets/modules/userprofiles.scss
+++ b/app/assets/stylesheets/modules/userprofiles.scss
@@ -1,9 +1,3 @@
-$accent: #57C3E9;
-$gray: #D8D8D8;
-$white: #fff;
-$lightGray: #f5f5f3;
-$dark: #666;
-
 body,html {
   height: 100%;
   background-color: $lightGray;
@@ -18,7 +12,7 @@ h1,h2,h3,h4,h5,h6,body {
   letter-spacing: 0.15em;
   font-size: 16px;
   color: $dark;
-  font-family: 'Unica One', "Avenir", "游ゴシック", "YuGothic", "ヒラギノ角ゴ Pro W6", "HIragino Kaku Gothic Pro W6", "HIragino Kaku Gothic Pro", Osaka, Meiryo, "メイリオ", "ＭＳ Ｐゴシック", "MS P Gothic", sans-serif;
+  font-family: $default-font;
   margin: 0;
 }
 
@@ -85,8 +79,8 @@ header.header {
       position: absolute;
       top: 46px;
       right: 0;
-      border-left: 1px solid #d8d8d8;
-      border-right: 1px solid #d8d8d8;
+      border-left: 1px solid $gray;
+      border-right: 1px solid $gray;
       box-shadow: 1px 2px 5px rgba(0,0,0,0.1);
       li {
         background-color: #f0f0f0;
@@ -95,7 +89,7 @@ header.header {
           display: block;
           padding: 10px 20px;
           text-align: left;
-          border-bottom: 1px solid #d8d8d8;
+          border-bottom: 1px solid $gray;
         }
       }
     }
@@ -137,7 +131,7 @@ header.header {
     input[type="submit"] {
       background-color: $accent;
       border-radius: 20px;
-      color: #fff;
+      color: $white;
       border: 0;
       font-size: 18px;
       width: 20%;
