--- a/app/assets/stylesheets/modules/userprofiles.scss
+++ b/app/assets/stylesheets/modules/userprofiles.scss
@@ -1,10 +1,6 @@
 body,html {
-  height: 100%;
+  height: 100vh;
   background-color: $lightGray;
-}
-
-body {
-  padding-top: 60px;
 }
 
 h1,h2,h3,h4,h5,h6,body {
@@ -27,7 +23,6 @@ a {
 header.header {
   border-bottom: 1px solid #191970;
   background-color: $white;
-  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -98,10 +93,9 @@ header.header {
 
 
 .contents {
-  height: calc(100% - 62px);
+  height: calc(100vh - 62px);
   width: 1200px;
   margin: 0 auto;
-  padding-top: 62px;
   &__btn {
     display: block;
     height: 80px;
