migrate file fix

--- a/app/views/userprofiles/new.html.haml
+++ b/app/views/userprofiles/new.html.haml
@@ -1,5 +1,2 @@
-.addresses
-  = link_to "#" "contents__btn" do
-    キャンセル
-  = link_to "#" "contents__btn" do
-    登録
+.form-address
+  = render "form_userprofile"
