--- a/app/views/userprofiles/_form_userprofile.html.haml
+++ b/app/views/userprofiles/_form_userprofile.html.haml
@@ -1,7 +1,54 @@
 .addresses
   = form_with model: @userprofile, local: true do |f|
-    
-    .btns
+    %p 名前(必須)
+    = f.text_field :name1, {}
+    %p フリガナ(必須)
+    = f.text_field :name2, {}
+    %p 年齢
+    = f.number_field :age, {}
+    %p 性別
+    = f.select :gender, ["男性","女性"], {}
+    %p 血液型
+    = f.select :blood_type, ["A","B","AB","O","その他"], {}
+    %p 生年月日
+    = f.date_select :birthday, {}
+    %p 都道府県
+    = f.select :prefecture1, ["北海道","青森県","岩手県","宮城県","秋田県","山形県","福島県","茨城県","栃木県","群馬県","埼玉県","千葉県","東京都","神奈川県","新潟県","富山県","石川県","福井県","山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県","和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県","大分県","宮崎県","鹿児島県","沖縄県"], {}
+    %p 住所
+    = f.text_field :address1, {}
+    %p 連絡先(電話番号)
+    = f.telephone_field :phonenumber1, {}
+    %p 連絡先(携帯)
+    = f.telephone_field :phonenumber2, {}
+    %p 緊急連絡先
+    %p 都道府県
+    = f.select :prefecture2, ["北海道","青森県","岩手県","宮城県","秋田県","山形県","福島県","茨城県","栃木県","群馬県","埼玉県","千葉県","東京都","神奈川県","新潟県","富山県","石川県","福井県","山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県","和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県","大分県","宮崎県","鹿児島県","沖縄県"], {}
+    %p 住所
+    = f.text_field :address2, {}
+    %p 連絡先(電話番号)
+    = f.telephone_field :phonenumber3, {}
+    %p 連絡先(携帯)
+    = f.telephone_field :phonenumber4, {}
+    %p メール
+    = f.email_field :mail, {}
+    %p 職業
+    = f.text_field :business, {}
+    %p 被保険者証
+    %p 番号
+    = f.number_field :insured_number, {}
+    %p 記号
+    = f.number_field :insured_id, {}
+    %p 交付年月日
+    = f.date_select :delivery_date, {}
+    %p 有効期限
+    = f.date_select :expiration_date, {}
+    %p 負担割合
+    = f.select :burden, ["1割負担","2割負担","3割負担","全額負担","その他"], {}
+    %p 保険者番号
+    = f.number_field :insurer_number, {}
+    %p 備考欄
+    = f.text_area :remarks, {}
+    .btn
       = link_to "/", class: "contents__btn" do
         キャンセル
       = f.button '登録', class: 'contents__btn'
