--- a/app/views/userprofiles/_form_userprofile.html.haml
+++ b/app/views/userprofiles/_form_userprofile.html.haml
@@ -1,52 +1,55 @@
-.addresses
-  = form_with model: @userprofile, local: true do |f|
-    %p 名前(必須)
-    = f.text_field :name1, {}
-    %p フリガナ(必須)
-    = f.text_field :name2, {}
-    %p 年齢
-    = f.number_field :age, {}
-    %p 性別
-    = f.select :gender, ["男性","女性"], {}
-    %p 血液型
-    = f.select :blood_type, ["A","B","AB","O","その他"], {}
-    %p 生年月日
-    = f.date_select :birthday, {}
+= form_with model: @userprofile, local: true do |f|
+  .userprofile_addresses
+    .userprofile_addresses--informetion
+      %p 名前(必須)
+      = f.text_field :name1, {}
+      %p フリガナ(必須)
+      = f.text_field :name2, {}
+      %p 年齢
+      = f.number_field :age, {}
+      %p 性別
+      = f.select :gender, ["男性","女性"], {prompt: "---"}
+      %p 血液型
+      = f.select :blood_type, ["A","B","AB","O","その他"], {prompt: "---"}
+      %p 生年月日
+      = f.date_select :birthday, {use_month_numbers: true, start_year: 1930, end_year: (Time.now.year), default: Date.new(1989, 1, 1), date_separator: '/'}
+      %p メール
+      = f.email_field :mail, {}
+      %p 職業
+      = f.text_field :business, {}
+    .userprofile_addresses--street_address 住所
     %p 都道府県
-    = f.select :prefecture1, ["北海道","青森県","岩手県","宮城県","秋田県","山形県","福島県","茨城県","栃木県","群馬県","埼玉県","千葉県","東京都","神奈川県","新潟県","富山県","石川県","福井県","山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県","和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県","大分県","宮崎県","鹿児島県","沖縄県"], {}
-    %p 住所
+    = f.select :prefecture1, ["北海道","青森県","岩手県","宮城県","秋田県","山形県","福島県","茨城県","栃木県","群馬県","埼玉県","千葉県","東京都","神奈川県","新潟県","富山県","石川県","福井県","山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県","和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県","大分県","宮崎県","鹿児島県","沖縄県"], {prompt: "---"}
+    %p 市区町村番地建物名
     = f.text_field :address1, {}
     %p 連絡先(電話番号)
-    = f.telephone_field :phonenumber1, {}
+    = f.telephone_field :phonenumber1, {maxlength: 10}
     %p 連絡先(携帯)
-    = f.telephone_field :phonenumber2, {}
-    %p 緊急連絡先
+    = f.telephone_field :phonenumber2, {maxlength: 11}
+    .userprofile_addresses--emergency_contact 緊急連絡先
     %p 都道府県
-    = f.select :prefecture2, ["北海道","青森県","岩手県","宮城県","秋田県","山形県","福島県","茨城県","栃木県","群馬県","埼玉県","千葉県","東京都","神奈川県","新潟県","富山県","石川県","福井県","山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県","和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県","大分県","宮崎県","鹿児島県","沖縄県"], {}
-    %p 住所
+    = f.select :prefecture2, ["北海道","青森県","岩手県","宮城県","秋田県","山形県","福島県","茨城県","栃木県","群馬県","埼玉県","千葉県","東京都","神奈川県","新潟県","富山県","石川県","福井県","山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県","和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県","大分県","宮崎県","鹿児島県","沖縄県"], {prompt: "---"}
+    %p 市区町村番地建物名
     = f.text_field :address2, {}
     %p 連絡先(電話番号)
-    = f.telephone_field :phonenumber3, {}
+    = f.telephone_field :phonenumber3, {maxlength: 10}
     %p 連絡先(携帯)
-    = f.telephone_field :phonenumber4, {}
-    %p メール
-    = f.email_field :mail, {}
-    %p 職業
-    = f.text_field :business, {}
-    %p 被保険者証
+    = f.telephone_field :phonenumber4, {maxlength: 11}
+    
+    .userprofile_addresses--insured_card 被保険者証
     %p 番号
     = f.number_field :insured_number, {}
     %p 記号
     = f.number_field :insured_id, {}
     %p 交付年月日
-    = f.date_select :delivery_date, {}
+    = f.date_select :delivery_date, {use_month_numbers: true, start_year: 1990, end_year: (Time.now.year), default: Date.new(2000, 1, 1), date_separator: '/'}
     %p 有効期限
-    = f.date_select :expiration_date, {}
+    = f.date_select :expiration_date, {use_month_numbers: true, start_year: (Time.now.year), end_year: (Time.now.year)+10, date_separator: '/'}
     %p 負担割合
-    = f.select :burden, ["1割負担","2割負担","3割負担","全額負担","その他"], {}
+    = f.select :burden, ["1割負担","2割負担","3割負担","全額負担","三療券","その他"], {prompt: "---"}
     %p 保険者番号
     = f.number_field :insurer_number, {}
-    %p 備考欄
+    .userprofile_addresses--remakes_column 備考欄
     = f.text_area :remarks, {}
     .btn
       = link_to "/", class: "contents__btn" do
