topページとformのCSS修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,11 @@
 @import "config/colors";
 @import "config/fonts";
 
+//変数
+@import "mixin/btn_design";
+
 //topページ
-@import "modules/userprofiles"
+@import "modules/userprofiles";
+
+//form_userprofileページ
+@import "modules/new-userprofiles";
