--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,8 @@
 $accent: #57C3E9;
 $gray: #D8D8D8;
+$slategray: #708090;
 $white: #fff;
 $lightGray: #f5f5f3;
 $dark: #666;
+$crimson: #DC143C;
+$salmon: #FA8072;
