--- a/app/views/userprofiles/_form_userprofile.html.haml
+++ b/app/views/userprofiles/_form_userprofile.html.haml
@@ -1,6 +1,6 @@
 = form_with model: @userprofile, local: true do |f|
   .userprofile_addresses
-    .userprofile_addresses--informetion
+    .userprofile_addresses__informetion
       %p 名前(必須)
       = f.text_field :name1, {}
       %p フリガナ(必須)
@@ -17,7 +17,7 @@
       = f.email_field :mail, {}
       %p 職業
       = f.text_field :business, {}
-    .userprofile_addresses--street_address 住所
+    .userprofile_addresses__street_address 住所
     %p 都道府県
     = f.select :prefecture1, ["北海道","青森県","岩手県","宮城県","秋田県","山形県","福島県","茨城県","栃木県","群馬県","埼玉県","千葉県","東京都","神奈川県","新潟県","富山県","石川県","福井県","山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県","和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県","大分県","宮崎県","鹿児島県","沖縄県"], {prompt: "---"}
     %p 市区町村番地建物名
@@ -26,7 +26,7 @@
     = f.telephone_field :phonenumber1, {maxlength: 10}
     %p 連絡先(携帯)
     = f.telephone_field :phonenumber2, {maxlength: 11}
-    .userprofile_addresses--emergency_contact 緊急連絡先
+    .userprofile_addresses__emergency_contact 緊急連絡先
     %p 都道府県
     = f.select :prefecture2, ["北海道","青森県","岩手県","宮城県","秋田県","山形県","福島県","茨城県","栃木県","群馬県","埼玉県","千葉県","東京都","神奈川県","新潟県","富山県","石川県","福井県","山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県","和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県","大分県","宮崎県","鹿児島県","沖縄県"], {prompt: "---"}
     %p 市区町村番地建物名
@@ -36,7 +36,7 @@
     %p 連絡先(携帯)
     = f.telephone_field :phonenumber4, {maxlength: 11}
     
-    .userprofile_addresses--insured_card 被保険者証
+    .userprofile_addresses__insured_card 被保険者証
     %p 番号
     = f.number_field :insured_number, {}
     %p 記号
@@ -49,9 +49,9 @@
     = f.select :burden, ["1割負担","2割負担","3割負担","全額負担","三療券","その他"], {prompt: "---"}
     %p 保険者番号
     = f.number_field :insurer_number, {}
-    .userprofile_addresses--remakes_column 備考欄
+    .userprofile_addresses__remakes_column 備考欄
     = f.text_area :remarks, {}
-    .btn
-      = link_to "/", class: "contents__btn" do
+    .userprofile_addresses__btn
+      = link_to "/", class: "userprofile_addresses__btn--design color-gray" do
         キャンセル
-      = f.button '登録', class: 'contents__btn'
+      = f.button '登録', class: 'userprofile_addresses__btn--design color-red'
