--- a/app/assets/stylesheets/modules/_show-userprofile.scss
+++ b/app/assets/stylesheets/modules/_show-userprofile.scss
@@ -1,10 +1,38 @@
 .userprofile-show {
-  &__title {
-
+  width: 80%;
+  margin: 0 auto;
+  background-color: oldlace;
+  &__top {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    padding-top: 20px;
+    &--title h3 {
+      margin: 0;
+      line-height: 50px;
+    }
+    &--btn {
+      font-size: 15px;
+      text-align: center;
+      position: absolute;
+      right: 0;
+      padding-right: 30px;
+      &--edit {
+        text-decoration: none;
+        padding-right: 30px;
+        color: blue;//仮置き
+      }
+      &--delete {
+        text-decoration: none;
+        color: $white;//仮置き
+        background-color: $crimson;
+        height: 30px;
+        width: 50px;
+        border-radius: 10px;
+      }
+    }
   }
-  &__btn {
 
-  }
   &__addresses {
     &--row1 {
       &--name {
