--- a/app/assets/stylesheets/modules/_show-userprofile.scss
+++ b/app/assets/stylesheets/modules/_show-userprofile.scss
@@ -38,7 +38,7 @@
   }
 
   &__addresses {
-    height: 300px;
+    //height: 300px;
     width: 90%;
     margin: auto;
     &--row1 {
@@ -134,24 +134,62 @@
     }
   }
   &__street {
+    width: 90%;
+    margin: auto;
+    &--title {
+      display: flex;
+    }
     &--road {
+      display: flex;
+      border: solid 1px $dark;
       &--addresses {
-
+        width: 70%;
+        margin: 0 10px;
       }
       &--phone {
-        
+        width: 30%;
+        //margin: 0 10px;
+        &--home {
+          display: flex;
+          justify-content: space-between;
+          margin-right: 10px;//
+          border-bottom: solid 1px $dark;
+          border-left:  solid 1px $dark;
+        }
+        &--mobile {
+          display: flex;
+          justify-content: space-between;
+          border-left:  solid 1px $dark;
+        }
       }
     }
     &--emergency-contact {
+      display: flex;
+      border: solid 1px $dark;
       &--addresses {
-  
+        width: 70%;
+        margin: 0 10px;
       }
       &--phone {
-          
+        width: 30%;
+        margin: 0 10px;
+        &--home {
+          display: flex;
+          justify-content: space-between;
+          border-bottom: solid 1px $dark;
+          border-left:  solid 1px $dark;
+        }
+        &--mobile {
+          display: flex;
+          justify-content: space-between;
+          border-left:  solid 1px $dark;  
+        }
       }
     }
   }
   &__insured-card {
+    width: 90%;
+    margin: auto;
     &--row1 {
 
     }
@@ -160,6 +198,8 @@
     }
   }
   &__remakes {
+    width: 90%;
+    margin: auto;
     &--column {
 
     }
