form userprofile　電話番行integerからbigintに変更

--- a/app/views/userprofiles/show.html.haml
+++ b/app/views/userprofiles/show.html.haml
@@ -89,7 +89,7 @@
         = @userprofile.delivery_date
     .userprofile-show__insured-card--row2
       .userprofile-show__insured-card--row2--expiration_date
-        %p 交付年月日
+        %p 有効期限
         = @userprofile.expiration_date
       .userprofile-show__insured-card--row2--burden
         %p 負担割合
