--- a/app/assets/stylesheets/modules/_show-userprofile.scss
+++ b/app/assets/stylesheets/modules/_show-userprofile.scss
@@ -40,19 +40,22 @@
   &__addresses {
     width: 90%;
     margin: auto;
+    margin-top: 10px;
+    border: solid 1px $dark;
+    p {
+      font-weight: bold;
+    }
     &--row1 {
-      margin-top: 10px;
       display: flex;
       &--name {
         width: 50%;
-        border: solid 1px $dark;
+        //border: solid 1px $dark;
         &--name2 {
           display: flex;
           justify-content: space-around;
           border-bottom: solid 1px $dark;
           p {
             margin-right: 5px;
-            font-weight: bold;
           }
         }
         &--name1 {
@@ -60,13 +63,12 @@
           justify-content: space-around;
           p {
             margin-right: 5px;
-            font-weight: bold;
           }
         }
       }
       &--age {
         width: 20%;
-        border: solid 1px $dark;
+        border-left: solid 1px $dark;
         &--title {
           text-align: center;
           border-bottom: solid 1px $dark;
@@ -78,7 +80,7 @@
       }
       &--gender {
         width: 20%;
-        border: solid 1px $dark;
+        border-left: solid 1px $dark;
         &--title {
           text-align: center;
           border-bottom: solid 1px $dark;
@@ -90,7 +92,7 @@
       }
       &--blood_type {
         width: 20%;
-        border: solid 1px $dark;
+        border-left: solid 1px $dark;
         &--title {
           text-align: center;
           border-bottom: solid 1px $dark;
@@ -108,7 +110,7 @@
       &--birthday {
         width: calc(100% / 3);
         text-align: center;
-        border: solid 1px $dark;
+        border-top: solid 1px $dark;
         &--title {
           border-bottom: solid 1px $dark;
           font-weight: bold;
@@ -117,16 +119,17 @@
       &--mail {
         width: calc(100% / 3);
         text-align: center;
-        border: solid 1px $dark;
+        border-left: solid 1px $dark;
+        border-top: solid 1px $dark;
         p {
           border-bottom: solid 1px $dark;
-          font-weight: bold;
         }
       }
       &--business {
         width: calc(100% / 3);
         text-align: center;
-        border: solid 1px $dark;
+        border-left: solid 1px $dark;
+        border-top: solid 1px $dark;
         &--title {
           border-bottom: solid 1px $dark;
           font-weight: bold;
@@ -137,19 +140,20 @@
   &__street {
     width: 90%;
     margin: auto;
+    border: solid 1px $dark;
+    p {
+      font-weight: bold;
+    }
     &--title {
       display: flex;
       font-weight: bold;
     }
     &--road {
       display: flex;
-      border: solid 1px $dark;
+      border-bottom: solid 1px $dark;
       &--addresses {
         width: 70%;
         margin: 0 10px;
-        p {
-          font-weight: bold;
-        }
       }
       &--phone {
         width: 30%;
@@ -159,30 +163,20 @@
           padding: 0 10px;
           border-bottom: solid 1px $dark;
           border-left:  solid 1px $dark;
-          p {
-            font-weight: bold;
-          }
         }
         &--mobile {
           display: flex;
           justify-content: space-between;
           padding: 0 10px;
           border-left:  solid 1px $dark;
-          p {
-            font-weight: bold;
-          }
         }
       }
     }
     &--emergency-contact {
       display: flex;
-      border: solid 1px $dark;
       &--addresses {
         width: 70%;
         margin: 0 10px;
-        p {
-          font-weight: bold;
-        }
       }
       &--phone {
         width: 30%;
@@ -192,18 +186,12 @@
           padding: 0 10px;
           border-bottom: solid 1px $dark;
           border-left:  solid 1px $dark;
-          p {
-            font-weight: bold;
-          }
         }
         &--mobile {
           display: flex;
           justify-content: space-between;
           padding: 0 10px;
-          border-left:  solid 1px $dark;
-          p {
-            font-weight: bold;
-          }  
+          border-left:  solid 1px $dark;  
         }
       }
     }
@@ -211,18 +199,54 @@
   &__insured-card {
     width: 90%;
     margin: auto;
+    border:  solid 1px $dark;
+    p {
+      font-weight: bold;
+      border-bottom:  solid 1px $dark;
+    }
     &--row1 {
-
+      display: flex;
+      text-align: center;
+      border-top:  dashed 1px $dark;
+      &--insured_number {
+        width: calc(100% / 3); 
+      }
+      &--insured_key {
+        width: calc(100% / 3);
+        border-left:  solid 1px $dark; 
+      }
+      &--delivery_date {
+        width: calc(100% / 3);
+        border-left:  solid 1px $dark;
+      }
+      
     }
     &--row2 {
+      display: flex;
+      text-align: center;
+      border-top:  solid 1px $dark;
+      &--expiration_date {
+        width: calc(100% / 3); 
+      }
+      &--burden {
+        width: calc(100% / 3);
+        border-left:  solid 1px $dark;
+      }
+      &--insurer_number {
+        width: calc(100% / 3);
+        border-left:  solid 1px $dark;
+      }
       
     }
   }
   &__remakes {
     width: 90%;
+    height: 50px;
     margin: auto;
+    border:  solid 1px $dark;
     &--column {
-
+      overflow-y: scroll;
+      overflow-x: hidden;
     }
   }
 }
