電話番号を「-」付き表示　備考欄の位置を修正

--- a/app/assets/stylesheets/modules/_show-userprofile.scss
+++ b/app/assets/stylesheets/modules/_show-userprofile.scss
@@ -244,7 +244,12 @@
     height: 50px;
     margin: auto;
     border:  solid 1px $dark;
+    &--title {
+      padding-left: 10px;
+      font-weight: bold;
+    }
     &--column {
+      padding-left: 10px;
       overflow-y: scroll;
       overflow-x: hidden;
     }
