--- a/app/views/userprofiles/show.html.haml
+++ b/app/views/userprofiles/show.html.haml
@@ -76,7 +76,8 @@
           = TelFormatter.format("#{@userprofile.phonenumber4}")
   
   .userprofile-show__insured-card
-    被保険者証
+    .userprofile-show__insured-card--title
+      被保険者証
     .userprofile-show__insured-card--row1
       .userprofile-show__insured-card--row1--insured_number
         %p 番号
