--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
             <ul class="user__info">
               <li>
                 <%= link_to "マイページ", "#" %>
-                <%= link_to "ログアウト", "#" %>
+                <%= link_to "ログアウト", destroy_user_session_path %>
               </li>
             </ul>
           </span>
