"heder"defalt表示からlogin後のみに変更

--- a/app/views/userprofiles/index.html.haml
+++ b/app/views/userprofiles/index.html.haml
@@ -1,3 +1,4 @@
+= render 'head'
 .contents
   .form
     = form_with(url: search_userprofiles_path, local: true, mrthod: :get, class:"search-form") do |f|
