--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -10,6 +10,9 @@
 			= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
 				= render "devise/shared/error_messages", resource: resource
 				.field
+					= f.label :name
+					= f.text_field :name, autofocus: true
+				.field
 					= f.label :email
 					= f.email_field :email, autofocus: true, autocomplete: "email"
 				-if devise_mapping.confirmable? && resource.pending_reconfirmation?
@@ -34,5 +37,5 @@
 					= f.submit "Update"
 			%h3 Cancel my account
 			%p Unhappy?
-			= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
+			= button_to "delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
 			= link_to "Back", :back
