--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -19,8 +19,12 @@
 					Currently waiting confirmation for:
 					= resource.unconfirmed_email
 				.field
+					= f.label :current_password
+					%i"(パスワードを変更する場合は現在のパスワードを入力して下さい変更しない場合は入力しないでください)"
+					= f.password_field :current_password, autocomplete: "current-password"
+				.field
 					= f.label :password
-					%i"(leave blank if you don't want to change it)"
+					%i"(変更したくない場合は空白のままにしてください)"
 					= f.password_field :password, autocomplete: "new-password"
 					-if @minimum_password_length
 						%em
@@ -29,13 +33,8 @@
 				.field
 					= f.label :password_confirmation
 					= f.password_field :password_confirmation, autocomplete: "new-password"
-				.field
-					= f.label :current_password
-					%i"(we need your current password to confirm your changes)"
-					= f.password_field :current_password, autocomplete: "current-password"
 				.actions
 					= f.submit "Update"
-			%h3 Cancel my account
+			%h3 アカウント削除
 			%p Unhappy?
 			= button_to "delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
-			= link_to "Back", :back
