--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -5,7 +5,7 @@
 			%span
 				= current_user.name
 			= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn'
-			= link_to "トップページに戻る", :back, class: 'btn'
+			= link_to "トップページに戻る", root_path, class: 'btn'
 		.account-page__innner--right
 			= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
 				= render "devise/shared/error_messages", resource: resource
